src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Top_Level_Campaign__c</fullName>
        <formula>IF( ISBLANK(Parent.Parent.Parent.Parent.Name),
 IF(ISBLANK(Parent.Parent.Parent.Name),
   IF(ISBLANK(Parent.Parent.Name),
     IF(ISBLANK(Parent.Name),
       Name,
       Parent.Name),
     Parent.Parent.Name),
   Parent.Parent.Parent.Name),
 Parent.Parent.Parent.Parent.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Level Campaign</label>
        <type>Text</type>
    </fields>

    <fields>
      <fullName>Parent_Campaign_1__c</fullName>
      <formula>IF( ISBLANK(Parent.Name),Name,Parent.Name)</formula>
      <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
      <label>Parent Campaign 1</label>
      <type>Text</type>
    </fields>

    <fields>
      <fullName>Parent_Campaign_2__c</fullName>
      <formula>IF(ISBLANK(Parent.Parent.Name),
                IF(ISBLANK(Parent.Name),
                  Name,
                  Parent.Name),
                Parent.Parent.Name)</formula>
      <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
      <label>Parent Campaign 2</label>
      <type>Text</type>
    </fields>

    <fields>
      <fullName>Parent_Campaign_3__c</fullName>
      <formula>IF(ISBLANK(Parent.Parent.Parent.Name),
   IF(ISBLANK(Parent.Parent.Name),
     IF(ISBLANK(Parent.Name),
       Name,
       Parent.Name),
     Parent.Parent.Name),
   Parent.Parent.Parent.Name)</formula>
      <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
      <label>Parent Campaign 3</label>
      <type>Text</type>
    </fields>

</CustomObject>